@@ -19,6 +19,11 @@ export PATH=@GDAL_PREFIX@/bin:@GEOS_PREFIX@/bin:$PATH
 # CLASSPATH for running the java based commands. Whether you use this directory 
 # or not, the following jars should be accessible:
 #
+# Required by the --gui option:
+#      guie.jar
+#      starspan.guie
+# guie.jar can be downloaded from https://sourceforge.net/project/showfiles.php?group_id=141010
+#
 # Required by the --view_geometries option:
 #      plotapplication.jar
 # Can be download from http://ptolemy.eecs.berkeley.edu/java/ptplot
@@ -40,6 +45,9 @@ usage() {
 
 starspan extended usage:
 
+    starspan --gui
+        launches the StarSpan GUI
+            
     starspan --view_geometries dumped_geometries.csv
         launches the ptPlot application with the given file.
         Normally dumped_geometries.csv was generated by 
@@ -69,6 +77,25 @@ EOF
 if [ "$1" = "--xhelp" ]; then
 	usage
 	exit
+
+elif [ "$1" = "--gui" ]; then
+	echo "[Launching StarSpan GUI...]"
+    if [ ! -x java ]; then
+        echo "Command 'java' is required to launch this application."
+        exit 1
+    fi
+    if [ ! -f $BINDIR/starspan.guie ]; then
+        echo "Cannot open $BINDIR/starspan.guie"
+        exit 1
+    fi
+	shift
+	CP=$CLASSPATH
+	CP=$JARS/guie.jar:$CP
+	java -Xmx256m -cp "$CP" guie.Guie $BINDIR/starspan.guie "$@"
+	ret=$?
+	if [ "$ret" != 0 ]; then
+		echo "[exit code=$ret -- a missing component in your classpath?]"
+	fi
 
 elif [ "$1" = "--view_geometries" ]; then
 	echo "[Launching ptplot...]"
